--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -316,6 +316,11 @@
     <string name="timetable_hour_break">Pause</string>
     <string name="timetable_hour_hour">Stunde</string>
 
+    <string name="timetable_assistant_step1">Schritt 1: Stundenplan Daten angeben</string>
+    <string name="timetable_assistant_step2">Schritt 2: Zeiten eingeben</string>
+    <string name="timetable_assistant_step3">Schritt 3: Fächer ergänzen</string>
+    <string name="timetable_assistant_step4">Schritt 4: Stundenplan eingeben</string>
+
     <string name="todo_list">ToDo-Liste</string>
     <string name="todo_category">Kategorie</string>
     <string name="todo_solved">Erledigt</string>
