--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -118,8 +118,10 @@
     <string name="settings_general_custom_app_bar_title">Eigenes Hintergrundbild der App-Bar</string>
     <string name="settings_general_custom_app_bar_summary">App-Bar-Hintergrundbild durch eigenes Bild ersetzen!</string>
     <string name="settings_general_custom_background_select">Bilder auswählen</string>
+    <string name="settings_general_whatsNew">Neuigkeiten</string>
     <string name="settings_general_whatsNew_title">Neuigkeiten erneut anzeigen</string>
     <string name="settings_general_whatsNew_summary">Den Neuigkeiten Bildschirm erneut anzeigen</string>
+    <string name="settings_general_database">Datenbank</string>
     <string name="settings_general_deleteMemories_title">Erinnerungen löschen</string>
     <string name="settings_general_deleteMemories_summary">Erinnerungen löschen, nachdem sie abgelaufen sind</string>
     <string name="settings_general_reset_database_title">Datenbank zurücksetzen</string>
