--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -551,5 +551,7 @@
     <string name="message_file_format_unknown">Das Format ist nicht bekannt!</string>
     <string name="message_file_not_exists">Die Datei existiert nicht!</string>
     <string name="message_wrong_method">Falsche Methode wurde benutzt!</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
 </resources>
