--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -114,6 +114,8 @@
     <string name="settings_general_summary">Einstellungen für Notifikationen, Erinnerungen, Datenbank und Design</string>
     <string name="settings_general_notifications_title">Notifikationen anzeigen</string>
     <string name="settings_general_notifications_summary">Notifikationen von aktuellen Erinnerungen anzeigen!</string>
+    <string name="settings_general_assistant">Assistent benutzen</string>
+    <string name="settings_general_assistant_summary">Wenn Assistent vorhanden, dann diesen benutzen, um ein neues Element hinzuzufügen!</string>
     <string name="settings_general_background">Hintergründe</string>
     <string name="settings_general_custom_background_title">Eigenes Hintergrundbild</string>
     <string name="settings_general_custom_background_summary">App-Hintergrundbild durch eigenes Bild ersetzen!</string>
