--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -489,6 +489,10 @@
     <string name="sys_showData">Daten zeigen</string>
     <string name="sys_seperator">:</string>
 
+    <string name="on_boarding_note">Notiz erstellen</string>
+    <string name="on_boarding_note_title">Geben Sie hier einen Titel und eine Berschreibung an!</string>
+    <string name="on_boarding_note_date">Geben Sie hier ein Datum ein, falls Sie erinnert werden wollen!</string>
+
     <string name="message_marklist_1">Die maximale Punktzahl sollte größer als 0 sein!</string>
     <string name="message_marklist_2">Die maximale Punktzahl sollte kleiner als 40000 sein!</string>
     <string name="message_marklist_3">Die kleinste Note sollte größer als 0 sein!</string>
