--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -490,8 +490,38 @@
     <string name="sys_seperator">:</string>
 
     <string name="on_boarding_note">Notiz erstellen</string>
-    <string name="on_boarding_note_title">Geben Sie hier einen Titel und eine Berschreibung an!</string>
-    <string name="on_boarding_note_date">Geben Sie hier ein Datum ein, falls Sie erinnert werden wollen!</string>
+    <string name="on_boarding_note_controls">Geben Sie hier Titel, Beschreibung an und aktivieren Sie die Erinnerung, falls Sie erinnert werden wollen, an!</string>
+    <string name="on_boarding_note_navigation">Hier können Sie einen neuen Eintrag erstellen oder vorhandene editieren bzw. löschen.</string>
+    <string name="on_boarding_note_speak">Hier können Sie eine Notiz per Sprache aufnehmen. Sprechen Sie laut Titel, Beschreibung, um danach den entsprechenden Inhalt aufzunehmen.</string>
+    <string name="on_boarding_markList">Notenlisten</string>
+    <string name="on_boarding_markList_type">Wählen Sie hier den Typ der Notenliste aus!</string>
+    <string name="on_boarding_markList_settings">Ändern Sie hier die Einstellungen für den jeweiligen Notenlisten-Typ!</string>
+    <string name="on_boarding_markList_menu">Hier können Sie Notenlisten speichern, als Standard festsetzen und öffnen oder die Diagramm-Ansicht anzeigen lassen.</string>
+    <string name="on_boarding_mark">Noten berechnen</string>
+    <string name="on_boarding_mark_year">Hier können Sie ein Jahr auswählen oder durch drücken des unten befindlichen Buttons ein neues Jahr anlegen!</string>
+    <string name="on_boarding_mark_subject">Hier können Sie ein Fach auswählen oder durch drücken des unten befindlichen Buttons ein neues Fach anlegen!</string>
+    <string name="on_boarding_mark_both">Wurde beides gewählt, erscheint im unteren Bereich ein neuer Button, über den Sie neue Arbeiten anlegen können!</string>
+    <string name="on_boarding_mark_list">Hier sehen Sie die angelegten Klausuren (Arbeiten)!</string>
+    <string name="on_boarding_timer">Events erstellen</string>
+    <string name="on_boarding_timer_new">Hier können Sie ein neues Event beim entsprechenden Datum hinzufügen!</string>
+    <string name="on_boarding_timer_list">Hier sehen Sie die entsprechenden Events anzeigen!</string>
+    <string name="on_boarding_timer_previous">Hier können Sie einen Tag zurück!</string>
+    <string name="on_boarding_timer_next">Hier können Sie einen Tag vor!</string>
+    <string name="on_boarding_todo">ToDo-Liste erstellen</string>
+    <string name="on_boarding_todo_select">Hier können Sie eine ToDo-Liste auswählen oder über den Button im unteren Bereich neue hinzufügen!</string>
+    <string name="on_boarding_todo_list">Hier sehen Sie die ToDos, welche bereits hinzugefügt wurden. Wenn Sie eine ToDo-Liste ausgewählt haben erscheint ein Button im unteren Bereich über den Sie neue ToDos hinzufügen können!</string>
+    <string name="on_boarding_bookmark">Lesezeichen anlegen</string>
+    <string name="on_boarding_bookmark_select">Wählen Sie hier ein Fach aus!</string>
+    <string name="on_boarding_bookmark_new">Fügen Sie hier neue Lesezeichen hinzu oder bearbeiten Sie vorhandene!</string>
+    <string name="on_boarding_bookmark_attachment">Sie können auch Dateien als Lesezeichen nehmen!</string>
+    <string name="on_boarding_bookmark_open">Sie öffnen ein Lesezeichen indem Sie auf den Eintrag lange drücken!</string>
+    <string name="on_boarding_learningCard">Kartei-Karten und Abfragen erstellen</string>
+    <string name="on_boarding_learningCard_navigation">Legen Sie hier neue Lehrer und neue Fächer an. Um neue Karteikarten und Abfragen zu erstellen, klicken Sie auf Assistent und befolgen die Anweisungen!</string>
+    <string name="on_boarding_learningCard_start">Klicken Sie hier, um eine Abfrage zu starten!</string>
+    <string name="on_boarding_timeTable">Stundenplan erstellen</string>
+    <string name="on_boarding_timeTable_navigation">Fügen Sie hier neue Fächer, Lehrer, Klassen, Jahre und Zeiten hinzu!</string>
+    <string name="on_boarding_timeTable_add">Hiermit öffnen Sie den Assitenten, befolgen Sie die Anweisungen, um einen neuen Stundenplan zu erstellen!</string>
+    <string name="on_boarding_timeTable_list">Sehen Sie hier die vorhandenen Stundenpläne!</string>
 
     <string name="message_marklist_1">Die maximale Punktzahl sollte größer als 0 sein!</string>
     <string name="message_marklist_2">Die maximale Punktzahl sollte kleiner als 40000 sein!</string>
