--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="main_nav_learn">Lernen</string>
     <string name="main_nav_learningCards">Kartei-Karten</string>
     <string name="main_nav_bookmarks">Lesezeichen</string>
+    <string name="main_nav_else">Sonstiges</string>
     <string name="main_speech">Sprachbefehl</string>
 
     <string name="main_menu_export">Export/Import</string>
@@ -395,6 +396,21 @@
     <string name="bookmark_import">Daten Importieren</string>
     <string name="bookmark_open">Öffnen</string>
 
+    <string name="traffic_light">Ampel</string>
+    <string name="traffic_light_start">Aufnahme starten</string>
+    <string name="traffic_light_stop">Aufnahme stoppen</string>
+    <string name="traffic_light_exp">Diagram anzeigen</string>
+    <string name="traffic_light_label_x">Zeit (in s)</string>
+    <string name="traffic_light_label_y">Lautsärke (in db)</string>
+    <string name="traffic_light_orange">Orange</string>
+    <string name="traffic_light_orange_def">45</string>
+    <string name="traffic_light_red">Rot</string>
+    <string name="traffic_light_red_def">60</string>
+    <string name="traffic_light_max">Maximum</string>
+    <string name="traffic_light_max_def">100</string>
+    <string name="traffic_light_notification_title">Zu Laut!</string>
+    <string name="traffic_light_notification_content">Es ist zu Laut! Bitte Leiser!</string>
+
     <string name="api_choice">Im- oder Export?</string>
     <string name="api_type">Modul</string>
     <string name="api_type_entry_type">Einträge wählen</string>
@@ -594,7 +610,4 @@
     <string name="message_file_format_unknown">Das Format ist nicht bekannt!</string>
     <string name="message_file_not_exists">Die Datei existiert nicht!</string>
     <string name="message_wrong_method">Falsche Methode wurde benutzt!</string>
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
-
 </resources>
